2014-02-12  YASUOKA Masahiko
	* Fix to parse the given arguments properly on Linux.
2014-02-11  YASUOKA Masahiko
	* wide char support.
	* execute the given command and argments keeping untouched.
2014-01-30  YASUOKA Masahiko
	* Add 'ctrl-l' to refresh screen.
	* follow window size change immediately.
2001-12-17  Kazumasa Utashiro @ IIJ
	* Added line-reverse-mode.
2000-06-26 Kazumasa Utashiro @ IIJ
	* All source code was overhauled and implemented many
	  interactive commands enabling various control from keyboard.
	  Help screen was also implemented.
2000-06-23  Takuya Sato @ IIJ
	* Original expantion is done by Takuya Sato of IIJ to implement
	  reverse option and scroll capabilty.